added phoneNum when reserving cinema reservation
