# docs/swagger.yaml
@@ -81,11 +81,14 @@ definitions:
         type: string
       people_num:
         type: integer
+      phone_num:
+        type: string
       to:
         type: string
     required:
     - from
     - people_num
+    - phone_num
     - to
     type: object
   http.loginRequest:
@@ -159,6 +162,8 @@ definitions:
         type: boolean
       people_num:
         type: integer
+      phone_num:
+        type: string
       start_time:
         type: string
       user_id:
